# c8

./: CMakeLists.txt  README.md
include/c8/: audio.h  c8.h  cpu.h  instruction.h  keyboard.h  memory.h
src/: CMakeLists.txt  audio.c  cpu.c  keyboard.c  main.c  memory.c
